--- a/reactuipattern/src/App.css
+++ b/reactuipattern/src/App.css
@@ -1,12 +1,18 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.tab{
+  display : flex;
+  text-align: left;
+  align-items: center;
+  justify-content: center;
 }
+.tab img{
+  width : 400px;
+  height: 200px;
+  margin: 10%;
+}
+.tab .content{
 
+}
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
@@ -14,8 +20,6 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -24,15 +28,3 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
