--- a/reactuipattern/src/App.css
+++ b/reactuipattern/src/App.css
@@ -1,30 +1,34 @@
+.App{
+  background-color: cyan;
+}
 
-.tab{
-  display : flex;
-  text-align: left;
-  align-items: center;
+.tab-box{
+  display: flex;
+  width: 100%;
   justify-content: center;
-}
-.tab img{
-  width : 400px;
-  height: 200px;
-  margin: 10%;
-}
-.tab .content{
-
+  align-items: center;
 }
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
 }
-
+body{
+  background-color:lightblue;
+}
+.buttonBox{
+  width: 80%;
+}
+button{
+  width: 20%;
+}
 .App-header {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  background-color: whitesmoke;
+  color: red;
 }
 
